<resources>
    <string name="app_name">Cleaner App</string>
    <string name="view_name">View Services</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="nameerror">Enter Valid Name</string>
    <string name="emailerror">Enter Valid Email</string>
    <string name="passworderror">Enter Some Password</string>
    <string name="mobileerror">Enter Valid Mobile Number</string>
    <string name="home_name">Home</string>
    <string name="book">Service Booking</string>
    <string name="date">Date:</string>
    <string name="start">Start Time:</string>
    <string name="end">End Time</string>
    <string name="service">Service Type:</string>
    <string name="address">Address</string>
    <string name="street">Street:</string>
    <string name="postal_code">Postal Code:</string>
    <string name="addtional">Additional Notes:</string>
    <string name="contacting">Contact You</string>
    <string name="contact">Contact:</string>
    <string name="email">Email:</string>
    <string name="proceed">Proceed to Paying</string>
    <string name="profile">Profile Page</string>
    <string name="contact_us">Contact Us</string>
    <string name="price">Price</string>
    <string name="total">Total Pricing:</string>
    <string name="promo">Promo Code:</string>
    <string name="Final">Final Pricing:</string>
    <string name="company">Greentac Pte Ltd </string>
    <string name="view">View Services</string>
    <string name="bookings">View Bookings</string>
    <string name="cleaner">View Cleaner</string>
    <string name="provide">Please provide your feedback here:</string>
    <string name="rate">How would you rate our app:</string>
    <string name="checkbox">This feedback is about:</string>
    <string name="suggestion">Suggestion</string>
    <string name="complaint">Complaint</string>
    <string name="poor">Poor</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="feedback">We Care. Please Share.</string>
    <string name="enquiries">Feedback</string>
    <string name="logout">Logout</string>
    <string name="change">Change Password</string>
    <string name="payment_type">Payment Type:</string>

    <string-array name="type">
        <item>Select a Payment Type</item>
        <item>Cash</item>
    </string-array>
</resources>
