<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/home"
            android:title="@string/home_name" />

        <item
            android:id="@+id/contact_us"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/view_service"
            android:title="@string/view" />

        <item
            android:id="@+id/view_bookings"
            android:title="@string/bookings" />

        <item
            android:id="@+id/view_cleaner"
            android:title="@string/cleaner" />

        <item
            android:id="@+id/view_feedback"
            android:title="@string/enquiries" />

        <item
            android:id="@+id/nav_change"
            android:title="@string/change" />

        <item
            android:id="@+id/logout"
            android:title="@string/logout" />
        
</menu>